--- a/HomeMates/VIew/Lobby.storyboard
+++ b/HomeMates/VIew/Lobby.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +18,116 @@
                     <view key="view" contentMode="scaleToFill" id="HGr-dZ-Fuu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p4B-oM-ulB">
+                                <rect key="frame" x="0.0" y="-10" width="375" height="250"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="喜愛做家事的一家人" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pSW-hC-zZy">
+                                        <rect key="frame" x="95.5" y="40" width="184" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID:  88888888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rzq-oo-xek">
+                                        <rect key="frame" x="178.5" y="212" width="146.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NdB-1l-vfG">
+                                        <rect key="frame" x="0.0" y="170" width="375" height="80"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Bullhorn_36px" translatesAutoresizingMaskIntoConstraints="NO" id="GVb-yh-ohy">
+                                                <rect key="frame" x="176" y="8" width="28" height="28"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="0x5-pk-h0g"/>
+                                                    <constraint firstAttribute="width" constant="36" id="hJe-b2-SxJ"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="pJH-Lc-jW8"/>
+                                                    <constraint firstAttribute="height" constant="36" id="uio-9t-bxI"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" name="Y0"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="80" id="l7E-tD-AB9"/>
+                                        </constraints>
+                                    </view>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gS1-K9-dBz">
+                                        <rect key="frame" x="20" y="80" width="150" height="150"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="150" id="CaO-eV-ez6"/>
+                                            <constraint firstAttribute="width" constant="150" id="HUX-1m-2IT"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="lkCornerRadius">
+                                                <real key="value" value="75"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="jqCornerRadius">
+                                                <real key="value" value="75"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nab-jX-pBU">
+                                        <rect key="frame" x="328" y="143" width="30" height="24"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="6AM-9j-hGL"/>
+                                            <constraint firstAttribute="height" constant="24" id="xfh-18-Xzb"/>
+                                        </constraints>
+                                        <state key="normal" image="OtherMember"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="Y1"/>
+                                <constraints>
+                                    <constraint firstItem="nab-jX-pBU" firstAttribute="leading" secondItem="Rzq-oo-xek" secondAttribute="trailing" id="0q9-h4-exY"/>
+                                    <constraint firstItem="gS1-K9-dBz" firstAttribute="leading" secondItem="p4B-oM-ulB" secondAttribute="leading" constant="20" id="2it-eZ-asP"/>
+                                    <constraint firstItem="NdB-1l-vfG" firstAttribute="leading" secondItem="p4B-oM-ulB" secondAttribute="leading" id="DNr-sC-qoI"/>
+                                    <constraint firstItem="Rzq-oo-xek" firstAttribute="bottom" secondItem="gS1-K9-dBz" secondAttribute="bottom" id="EMg-5a-QrJ"/>
+                                    <constraint firstAttribute="height" constant="250" id="JU7-c5-ftH"/>
+                                    <constraint firstItem="pSW-hC-zZy" firstAttribute="top" secondItem="p4B-oM-ulB" secondAttribute="top" constant="40" id="P82-U8-fLt"/>
+                                    <constraint firstAttribute="bottom" secondItem="NdB-1l-vfG" secondAttribute="bottom" id="kjy-eT-sLn"/>
+                                    <constraint firstItem="pSW-hC-zZy" firstAttribute="centerX" secondItem="p4B-oM-ulB" secondAttribute="centerX" id="lGh-r8-xbj"/>
+                                    <constraint firstAttribute="trailing" secondItem="NdB-1l-vfG" secondAttribute="trailing" id="pde-oc-kt6"/>
+                                    <constraint firstItem="gS1-K9-dBz" firstAttribute="top" secondItem="p4B-oM-ulB" secondAttribute="top" constant="80" id="tdg-L6-BCl"/>
+                                    <constraint firstAttribute="trailing" secondItem="nab-jX-pBU" secondAttribute="trailing" constant="20" id="x9D-Ai-sFB"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="jqCornerRadius">
+                                        <real key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yPU-2H-rY1">
+                                <rect key="frame" x="0.0" y="240" width="375" height="427"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Nyd-dX-Vwa" firstAttribute="trailing" secondItem="p4B-oM-ulB" secondAttribute="trailing" id="Dmc-5g-Lsk"/>
+                            <constraint firstItem="p4B-oM-ulB" firstAttribute="leading" secondItem="Nyd-dX-Vwa" secondAttribute="leading" id="FiL-FS-eml"/>
+                            <constraint firstItem="yPU-2H-rY1" firstAttribute="leading" secondItem="Nyd-dX-Vwa" secondAttribute="leading" id="L8W-Rf-gmT"/>
+                            <constraint firstItem="Nyd-dX-Vwa" firstAttribute="bottom" secondItem="yPU-2H-rY1" secondAttribute="bottom" id="dsY-OO-djk"/>
+                            <constraint firstItem="Nyd-dX-Vwa" firstAttribute="trailing" secondItem="yPU-2H-rY1" secondAttribute="trailing" id="vEK-av-Wx2"/>
+                            <constraint firstItem="p4B-oM-ulB" firstAttribute="top" secondItem="HGr-dZ-Fuu" secondAttribute="top" constant="-10" id="wLe-zk-4Hd"/>
+                            <constraint firstItem="yPU-2H-rY1" firstAttribute="top" secondItem="p4B-oM-ulB" secondAttribute="bottom" id="xyG-vI-p9g"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Nyd-dX-Vwa"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5YO-aw-s41" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-151" y="-10"/>
+            <point key="canvasLocation" x="-151.19999999999999" y="-10.344827586206897"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Bullhorn_36px" width="37" height="36"/>
+        <image name="OtherMember" width="31" height="24"/>
+        <namedColor name="Y0">
+            <color red="0.9882352941176471" green="0.8784313725490196" blue="0.46274509803921571" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Y1">
+            <color red="0.97254901960784312" green="0.81176470588235294" blue="0.21176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
